A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, French, German, Greek, Hungarian, Japanese, Latvian, Russian, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)
.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle SQL selects (dimir)

Bug fixes:
A......... [ZBX-3534] fixed templated linking using read-only template (Eduard)
..F....... [ZBX-5458] fixed some date strings are not being translated (Toms)
..F....... [ZBX-6110] fixed selected map remembering in monitoring->map (Eduard)
..F....... [ZBX-6117] fixed item value macros resolving using non-converted to null values (Eduard)
..F....... [ZBX-6113] fixed hidden input field appearing when assigning hosts to groups in IE (Pavels)
..F....... [ZBX-6063] fixed graph selection pop up working incorrectly when adding a graph to a templated screen (Pavels)
A.F....... [ZBX-6014] improved performance and removed get_accessible_triggers function (dotneft, Oleg)
..F....... [ZBX-6070] fixed event CSV export ignoring the selected page and filters (Pavels)
..F....... [ZBX-6006] optimized web interface API calls, which requested redundant data (Toms)
A......... [ZBX-5806] fixed template.massadd and template.massremove returning an empty hostids array (Pavels)
...G...... [ZBX-5201] added handling of PerfCounter error PDH_CALC_NEGATIVE_DENOMINATOR (dimir)
A......... [ZBX-6054] fixed host write permissions being required to view screens (dotneft, Pavels)
..F....... [ZBX-6027] fixed global notification messages don't work in fullscreen frontend mode (Toms)
..F....... [ZBX-6037] fixed duplicate frontend messages and changed frontend messages to show last event for 15 triggers instead of last 15 events (Oleg)
A.F....... [ZBX-5900] fixed date validation in services and maintenances, fixed JS calendar and fixed maintenance periods validation (Oleg)
..F....... [ZBX-5835] fixed possible "Undefined index" in Configuration -> Actions screen (Sasha)